[gd_scene load_steps=5 format=3 uid="uid://bb1x0mpjrfktd"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_hoqmk"]
[ext_resource type="AudioStream" uid="uid://cg1d8xa5xgm34" path="res://assets/sounds/card-flip.mp3" id="2_6ip5h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xa26"]
size = Vector2(129.406, 178.469)

[sub_resource type="LabelSettings" id="LabelSettings_dacr7"]
font_size = 25
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[node name="Card" type="Node2D"]
script = ExtResource("1_hoqmk")

[node name="Area2D" type="Area2D" parent="."]
priority = 1
metadata/_edit_lock_ = true

[node name="Picture" type="Sprite2D" parent="Area2D"]

[node name="Border" type="Sprite2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, -1)
shape = SubResource("RectangleShape2D_6xa26")

[node name="Sound" type="Node" parent="."]

[node name="CardSelected" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("2_6ip5h")
volume_db = -18.739

[node name="Resource_Cost" type="Label" parent="."]
offset_left = -100.0
offset_top = 108.0
offset_right = -43.0
offset_bottom = 245.0
label_settings = SubResource("LabelSettings_dacr7")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
